--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ watchfiles==0.16.1
 Jinja2==3.1.2
 requests==2.31.0
 email-validator==2.1.1
+asgiref==3.5.2
+asyncio-redis==0.16.0
+broadcaster==0.2.0
